force-app/main/default/objects/Study_Plan_Structure__c/Study_Plan_Structure__c.object-meta.xml
<CustomObject>
    <description>The requirements for a study plan.</description>
    <label>Study Plan Structure</label>
    <nameField>
        <label>Study Plan Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Plan Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>