force-app/main/default/objects/Study_Plan_Structure__c/fields/Allow_Pre_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Pre_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes a student can enroll without meeting the pre-requisites</description>
    <inlineHelpText>Denotes a student can enroll without meeting the pre-requisites</inlineHelpText>
    <label>Allow Pre-Enrollment?</label>
    <type>Checkbox</type>
</CustomField>