force-app/main/default/objects/Study_Plan_Structure__c/fields/EFTSL__c.field-meta.xml
<CustomField>
    <fullName>EFTSL__c</fullName>
    <formula>IF(ISBLANK( EFTSL_Override__c ),  Study_Unit__r.Default_EFTSL__c , EFTSL_Override__c  )</formula>
    <label>EFTSL</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>