force-app/main/default/objects/Study_Plan_Structure__c/fields/EFTSL_Override__c.field-meta.xml
<CustomField>
    <fullName>EFTSL_Override__c</fullName>
    <label>EFTSL (Override)</label>
    <precision>12</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>