force-app/main/default/objects/Study_Plan_Structure__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <description>Displays as a Program Required Unit in the Unit Enrollment Wizard</description>
    <formula>IF(NOT(ISBLANK(Parent_Study_Plan_Structure__c)),
IF(NOT(ISBLANK(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__c)),
IF(NOT(ISBLANK(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__c)),
AND(ISPICKVAL(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Category__c, &quot;Required&quot;), ISPICKVAL(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Category__c, &quot;Required&quot;), ISPICKVAL(Parent_Study_Plan_Structure__r.Category__c, &quot;Required&quot;), ISPICKVAL(Category__c, &quot;Required&quot;)),
AND(ISPICKVAL(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Category__c, &quot;Required&quot;), ISPICKVAL(Parent_Study_Plan_Structure__r.Category__c, &quot;Required&quot;), ISPICKVAL(Category__c, &quot;Required&quot;))),
AND(ISPICKVAL(Parent_Study_Plan_Structure__r.Category__c, &quot;Required&quot;), ISPICKVAL(Category__c, &quot;Required&quot;))),
ISPICKVAL(Category__c, &quot;Required&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays as a Program Required Unit in the Unit Enrollment Wizard</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>