force-app/main/default/objects/Study_Plan_Structure__c/fields/Max_Credits__c.field-meta.xml
<CustomField>
    <fullName>Max_Credits__c</fullName>
    <description>Maximum number of credits that can count towards parent group&apos;s completion.</description>
    <inlineHelpText>Maximum number of credits that can count towards parent group&apos;s completion.</inlineHelpText>
    <label>Max Credits</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>