force-app/main/default/objects/Study_Plan_Structure__c/fields/Parent_Study_Plan_Structure__c.field-meta.xml
<CustomField>
    <fullName>Parent_Study_Plan_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Study Plan Structure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Plan_Structure__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Group</value>
        </filterItems>
        <filterItems>
            <field>$Source.Study_Plan__c</field>
            <operation>equals</operation>
            <valueField>Study_Plan_Structure__c.Study_Plan__c</valueField>
        </filterItems>
        <infoMessage>Please select a group study plan structure that belongs to the same study plan.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Study_Plan_Structure__c</referenceTo>
    <relationshipLabel>Study Plan Structures</relationshipLabel>
    <relationshipName>Study_Plan_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>