force-app/main/default/objects/Study_Plan_Structure__c/fields/Requirement_Description__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Description__c</fullName>
    <label>Requirement Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>