force-app/main/default/objects/Study_Plan_Structure__c/fields/Requirement_Logic__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Logic__c</fullName>
    <label>Requirement Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>