force-app/main/default/objects/Study_Plan_Structure__c/fields/Sequence_Key__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Key__c</fullName>
    <description>Used behind the scenes to determine sequence based on both this record and its parent(s).</description>
    <formula>IF(NOT(ISBLANK(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__c)),
  &quot;G&quot; + IF(ISBLANK(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Sequence__c), &quot;999999&quot;, LPAD(TEXT(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Sequence__c), 6, &quot;0&quot;)) + &quot;.&quot;,
  &quot;&quot;) +
IF(NOT(ISBLANK(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__c)),
  &quot;G&quot; + IF(ISBLANK(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Sequence__c), &quot;999999&quot;, LPAD(TEXT(Parent_Study_Plan_Structure__r.Parent_Study_Plan_Structure__r.Sequence__c), 6, &quot;0&quot;)) + &quot;.&quot;,
  &quot;&quot;) +
IF(NOT(ISBLANK(Parent_Study_Plan_Structure__c)),
  &quot;G&quot; + IF(ISBLANK(Parent_Study_Plan_Structure__r.Sequence__c), &quot;999999&quot;, LPAD(TEXT(Parent_Study_Plan_Structure__r.Sequence__c), 6, &quot;0&quot;)) + &quot;.&quot;,
  &quot;&quot;) +
IF(RecordType.DeveloperName == &quot;Group&quot;, &quot;G&quot;, &quot;C&quot;) + IF(ISBLANK(Sequence__c), &quot;999999&quot;, LPAD(TEXT(Sequence__c), 6, &quot;0&quot;))</formula>
    <inlineHelpText>Used behind the scenes to determine sequence based on both this record and its parent(s).</inlineHelpText>
    <label>Sequence Key</label>
    <type>Text</type>
</CustomField>