force-app/main/default/objects/Study_Plan_Structure__c/fields/Study_Plan__c.field-meta.xml
<CustomField>
    <fullName>Study_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Plan</label>
    <referenceTo>Study_Plan__c</referenceTo>
    <relationshipLabel>Study Plan Structures</relationshipLabel>
    <relationshipName>Study_Plan_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>