force-app/main/default/objects/Study_Plan_Structure__c/fields/Units_Required__c.field-meta.xml
<CustomField>
    <fullName>Units_Required__c</fullName>
    <description>Use this instead of Credits to track completion of this group based on number of units completed.</description>
    <inlineHelpText>Use this instead of Credits to track completion of this group based on number of units completed.</inlineHelpText>
    <label># of Units Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>