force-app/main/default/objects/Study_Plan_Structure__c/validationRules/Required_Group_Completion_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Group_Completion_Type</fullName>
    <active>true</active>
    <description>To ensure that a group study plan structure has completion type defined.</description>
    <errorConditionFormula>RecordType.DeveloperName == &quot;Group&quot; &amp;&amp; ISBLANK( Units_Required__c ) &amp;&amp; ISBLANK( Credits__c )</errorConditionFormula>
    <errorMessage>The &quot;Credits&quot; or &quot;# of Units Required&quot; is required.</errorMessage>
</ValidationRule>