force-app/main/default/objects/Study_Plan_Structure__c/validationRules/Required_Unit_Credits.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Unit_Credits</fullName>
    <active>true</active>
    <description>To ensure the credits is entered for unit study plan structure when it is added to a group that completes by credits.</description>
    <errorConditionFormula>RecordType.DeveloperName == &quot;Unit&quot; &amp;&amp; NOT(ISBLANK(Parent_Study_Plan_Structure__r.Credits__c )) &amp;&amp; ISBLANK(Credits__c)</errorConditionFormula>
    <errorDisplayField>Credits__c</errorDisplayField>
    <errorMessage>The &quot;Credits&quot; is required.</errorMessage>
</ValidationRule>