force-app/main/default/objects/Study_Plan_Structure__c/validationRules/Validate_Study_Plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Study_Plan</fullName>
    <active>true</active>
    <description>To ensure the study plan for a parent study plan structure is the same as the child study plan structure.</description>
    <errorConditionFormula>NOT(ISBLANK( Parent_Study_Plan_Structure__c )) &amp;&amp;  Parent_Study_Plan_Structure__r.Study_Plan__c !=  Study_Plan__c</errorConditionFormula>
    <errorDisplayField>Parent_Study_Plan_Structure__c</errorDisplayField>
    <errorMessage>The parent must belong to the same study plan.</errorMessage>
</ValidationRule>